<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Cool_Live</string>
    <string name="txt_splash_dec">This is my sologan !</string>
    <string name="tip_waitlogin">Logining,Please wait...</string>
    <string name="tip_loading">Loading...</string>
    <string name="tip_failed_to_load">Failed to load.</string>
    <string name="tip_reload">Reload</string>
    <string name="txt_hint_input_general">Say something...</string>
    <string name="tip_emoji_unusable">You need to have an Intimacy Level of at least 10 to use advanced emoticions</string>
    <string name="tip_roomGiftCredit">Coin rebate: %1$s</string>
    <string name="txt_broadcaster">Broadcaster</string>
    <string name="txt_reservations">Bookings</string>
    <string name="txt_virtual_gift">Virtual Gift</string>
    <string name="common_hotlist_guide">Watch Hot Broadcasts</string>
    <string name="anchor_list_empty">View Hot Broadcasts</string>
    <string name="liveroom_message_template_normal_freepublic"><![CDATA[[medal:%1$s]<b><font color=\"#EC0102\"><xliff:g id="message_username">%2$s</xliff:g> : </font></b><font color=\"#3C3C3C\">%3$s</font>]]></string>
    <string name="liveroom_message_template_roomin_freepublic"><![CDATA[[medal:%1$s]<b><font color=\"#EC0102\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#3C3C3C\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_freepublic"><![CDATA[[medal:%1$s]<b><font color=\"#EC0102\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#DF3CE9\"> sent <xliff:g id="message_giftname">%3$s</xliff:g> </font> [gift:%4$s] </font><font color=\"#DF3CE9\"><xliff:g id="message_giftnum">%5$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_template_normal_paidpublic"><![CDATA[[medal:%1$s]<b><font color=\"#ECBF20\"><xliff:g id="message_username">%2$s</xliff:g> : </font></b><font color=\"#FFFFFF\">%3$s</font>]]></string>
    <string name="liveroom_message_template_roomin_paidpublic"><![CDATA[[medal:%1$s]<b><font color=\"#ECBF20\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#FFFFFF\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_paidpublic"><![CDATA[[medal:%1$s]<b><font color=\"#ECBF20\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#0CEDF5\"> sent <xliff:g id="message_giftname">%3$s</xliff:g> </font> [gift:%4$s] </font><font color=\"#0CEDF5\"><xliff:g id="message_giftnum">%5$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_template_normal_normalprv"><![CDATA[[medal:%1$s]<b><font color=\"#0CD7DE\"><xliff:g id="message_username">%2$s</xliff:g> : </font></b><font color=\"#FFFFFF\">%3$s</font>]]></string>
    <string name="liveroom_message_template_roomin_normalprv"><![CDATA[[medal:%1$s]<b><font color=\"#0CD7DE\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#FFFFFF\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_normalprv"><![CDATA[[medal:%1$s]<b><font color=\"#0CD7DE\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#FFD205\"> sent <xliff:g id="message_giftname">%3$s</xliff:g> </font> [gift:%4$s] </font><font color=\"#FFD205\"><xliff:g id="message_giftnum">%5$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_template_normal_advanceprv"><![CDATA[[medal:%1$s]<b><font color=\"#FFD205\"><xliff:g id="message_username">%2$s</xliff:g> : </font></b><font color=\"#FFFFFF\">%3$s</font>]]></string>
    <string name="liveroom_message_template_roomin_advanceprv"><![CDATA[[medal:%1$s]<b><font color=\"#FFD205\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#FFFFFF\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_advanceprv"><![CDATA[[medal:%1$s]<b><font color=\"#FFD205\"><xliff:g id="message_username">%2$s</xliff:g></font></b><font color=\"#FFD205\"> sent <xliff:g id="message_giftname">%3$s</xliff:g> </font> [gift:%4$s] </font><font color=\"#FFD205\"><xliff:g id="message_giftnum">%5$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_template_normal_freepublic_nomedal"><![CDATA[<b><font color=\"#EC0102\"><xliff:g id="message_username">%1$s</xliff:g> : </font></b><font color=\"#3C3C3C\">%2$s</font>]]></string>
    <string name="liveroom_message_template_roomin_freepublic_nomedal"><![CDATA[<b><font color=\"#EC0102\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#3C3C3C\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_freepublic_nomedal"><![CDATA[<b><font color=\"#EC0102\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#DF3CE9\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s] </font><font color=\"#DF3CE9\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_template_normal_paidpublic_nomedal"><![CDATA[<b><font color=\"#ECBF20\"><xliff:g id="message_username">%1$s</xliff:g> : </font></b><font color=\"#FFFFFF\">%2$s</font>]]></string>
    <string name="liveroom_message_template_roomin_paidpublic_nomedal"><![CDATA[<b><font color=\"#ECBF20\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#FFFFFF\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_paidpublic_nomedal"><![CDATA[<b><font color=\"#ECBF20\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#0CEDF5\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s] </font><font color=\"#0CEDF5\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_template_normal_normalprv_nomedal"><![CDATA[<b><font color=\"#0CD7DE\"><xliff:g id="message_username">%1$s</xliff:g> : </font></b><font color=\"#FFFFFF\">%2$s</font>]]></string>
    <string name="liveroom_message_template_roomin_normalprv_nomedal"><![CDATA[<b><font color=\"#0CD7DE\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#FFFFFF\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_normalprv_nomedal"><![CDATA[<b><font color=\"#0CD7DE\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#FFD205\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s] </font><font color=\"#FFD205\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_template_normal_advanceprv_nomedal"><![CDATA[<b><font color=\"#FFD205\"><xliff:g id="message_username">%1$s</xliff:g> : </font></b><font color=\"#FFFFFF\">%2$s</font>]]></string>
    <string name="liveroom_message_template_roomin_advanceprv_nomedal"><![CDATA[<b><font color=\"#FFD205\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#FFFFFF\"> Joined</font>]]></string>
    <string name="liveroom_message_template_gift_advanceprv_nomedal"><![CDATA[<b><font color=\"#FFD205\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#FFD205\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s] </font><font color=\"#FFD205\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="txt_hint_input_barrage">%1$s coins per pop-up msg</string>
    <string name="liveroom_message_gift_x">x %1$d</string>
    <string name="tip_unReadLiveMsg">%d unread messages</string>
    <string name="txt_send_msg">Send</string>
    <string name="liveroom_tariff_prompt_free_public">Public Broadcast is free to watch.</string>
    <string name="liveroom_tariff_prompt_pre_public">VIP Public Broadcast is billed at %1$s coins per minute.</string>
    <string name="liveroom_tariff_prompt_silver_private">One-on-One Broadcast is billed at %1$s coins per minute.</string>
    <string name="liveroom_tariff_prompt_golden_private">One-on-One Broadcast is billed at %1$s coins per minute.</string>
    <string name="liveroom_tariff_prompt_ok">Got it</string>
    <string name="liveroom_entrancecar_joined">%1$s Joined</string>
    <string name="liveroom_vipguest">VIP Guest</string>
    <string name="liveroom_header_vipguestdata">(%1$s/%2$s)</string>
    <string name="liveroom_close_room_notify">Are you sure to leave the broadcast room?</string>
    <string name="common_empty_text">No content yet.</string>
    <string name="common_btn_tap_to_retry">Reload</string>
    <string name="followinglist_empty_text">No following broadcasters.</string>
    <string name="live_common_noenough_money_tips">You don\'t have enough coins, please buy more.</string>
    <string name="liveroom_transition_anchor_private_broadcast_exception">The broadcaster is in a One-on-One broadcast. Do you still wish to send the invitation?</string>
    <string name="liveroom_transition_waiting_anchor_start_tips">Waiting for the broadcaster to start broadcast...</string>
    <string name="liveroom_transition_invite_enterroom_countdown_tips">The broadcaster has accepted your invitation.One-on-One Broadcast will start in</string>
    <string name="liveroom_transition_anchorinvite_enterroom_countdown_tips">You have accepted the invitation. One-on-One broadcast will start in:</string>
    <string name="liveroom_transition_enterroom_countdown_tips">The broadcaster is getting prepared. One-on-One broadcast will start in</string>
    <string name="liveroom_transition_invite_deny_without_message">The broadcaster is not responding. Please try again later</string>
    <string name="liveroom_transition_invite_deny_with_message">Sorry, the broadcaster has declined your invitation and left you a message as below: %1$s</string>
    <string name="liveroom_noenough_money_tips_watching">You are running out of coins. Please buy more coins to continue watching.</string>
    <string name="liveroom_noenough_money_tips_watch_end">You don\'t have enough coins to continue watching this broadcast.</string>
    <string name="liveroom_transition_anchor_offline">The broadcaster offline, please check back later.</string>
    <string name="liveroom_transition_enterroom_full">Broadcast room is full. Please check back later.</string>
    <string name="liveroom_transition_broadcast_ended">Broadcast has ended. Please check back later.</string>
    <string name="liveroom_transition_anchor_invite_network_error">Failed to accept the invitation. Please try again.</string>
    <string name="liveroom_transition_audience_invite_network_error">Trouble connecting to the server, please try again later.</string>
    <string name="live_talent_credits">%1$s coins</string>
    <string name="live_book_tips1">When do you want to start the One-on-One broadcast?</string>
    <string name="live_date">Date</string>
    <string name="live_time">Time</string>
    <string name="live_add_vgift">Add virtual gifts</string>
    <string name="live_quantity">Quantity:</string>
    <string name="live_total_price">Total Price:</string>
    <string name="live_note">Note:</string>
    <string name="live_book_now">BOOK NOW</string>
    <string name="live_book_sms">Notify me with SMS</string>
    <string name="live_book_num">Mobile Number</string>
    <string name="live_book_change_num">Change</string>
    <string name="live_login">Sign in</string>
    <string name="live_forgot_password">Forgotten Password?</string>
    <string name="live_sign_in_sign_up">Sign up</string>
    <string name="settings_about_us">About us</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_logoug">Log Out</string>
    <string name="settings_feedback_hint_tips">Please enter your details</string>
    <string name="settings_feedback_hint_email">Enter your email address</string>
    <string name="settings_feedback_submit">Submit</string>
    <string name="settings_feedback_submit_suc">Thanks for your feedback!</string>
</resources>