<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.qpidnetwork.livemodule.liveshow.login.LiveEmailSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="37dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <com.qpidnetwork.livemodule.framework.widget.MaterialTextField
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.qpidnetwork.livemodule.framework.widget.MaterialTextField
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"/>

        <!--宽度高度最好不要写死，以适配各种机型-->
        <Button
            android:id="@+id/btn_submit"
            android:text="@string/live_login"
            android:textColor="@color/submit_unusable"
            android:enabled="false"
            style="@style/CustomTheme.Btn.Submit"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/live_forgot_password"
                android:textColor="@color/email_sign_in_password_tips" />

            <TextView
                android:id="@+id/tv_sing_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="12sp"
                android:text="@string/live_sign_in_sign_up"
                android:textColor="@color/email_sign_in_password_tips" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
