<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/live_book_bg"
    tools:context="com.qpidnetwork.livemodule.liveshow.personal.book.BookPrivateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- tips -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_size_40dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/live_size_14dp"
            android:paddingRight="@dimen/live_size_14dp"
            android:text="@string/live_book_tips1"
            android:textSize="@dimen/live_size_14sp" />

        <!--　日期　-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/live_size_14dp"
            android:paddingRight="@dimen/live_size_14dp">

            <!-- Date -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/live_size_40dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/live_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/live_size_14sp" />

                <TextView
                    android:id="@+id/txt_book_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/talent_violet"
                    android:textSize="@dimen/live_size_14sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/hotlist_divider_color" />

            <!-- Time -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/live_size_40dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/live_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/live_size_14sp" />

                <TextView
                    android:id="@+id/txt_book_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/textView3"
                    android:layout_toRightOf="@+id/textView3"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/talent_violet"
                    android:textSize="@dimen/live_size_14sp" />
            </RelativeLayout>

        </LinearLayout>

        <!--　礼物　-->
        <LinearLayout
            android:id="@+id/ll_book_add_gift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/live_size_14dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/live_size_14dp"
            android:paddingRight="@dimen/live_size_14dp">

            <!-- 添加礼物 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/live_size_40dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/live_add_vgift"
                    android:textColor="@color/black"
                    android:textSize="@dimen/live_size_14sp" />

                <Switch
                    android:id="@+id/swh_add_gift"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true"
                    android:switchMinWidth="20dp"
                    android:textOff=" "
                    android:textOn=" "
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track" />
            </RelativeLayout>

            <!--　礼物　-->
            <LinearLayout
                android:id="@+id/ll_book_gift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--　礼物列表　-->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcv_vgift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- 数目 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/live_size_40dp"
                    android:layout_marginTop="@dimen/live_size_8dp"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/spinner_book_gift_sum"
                        android:layout_width="@dimen/live_size_100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/live_book_spinner_bg"
                        android:spinnerMode="dropdown" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/spinner_book_gift_sum"
                        android:layout_toStartOf="@+id/spinner_book_gift_sum"
                        android:text="@string/live_quantity"
                        android:textColor="@color/black"
                        android:textSize="@dimen/live_size_14sp" />

                </RelativeLayout>

                <!-- 价格　-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/live_size_40dp"
                    android:gravity="center_vertical">


                    <TextView
                        android:id="@+id/txt_book_gift_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/live_talent_credits"
                        android:textColor="@color/talent_yellow"
                        android:textSize="@dimen/live_size_18sp" />

                    <TextView
                        android:id="@+id/txt_book_gift_tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/txt_book_gift_price"
                        android:layout_toStartOf="@+id/txt_book_gift_price"
                        android:text="@string/live_total_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/live_size_14sp" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <!-- SMS -->
        <LinearLayout
            android:id="@+id/ll_book_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/live_size_14dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/live_size_14dp"
            android:paddingRight="@dimen/live_size_14dp">

            <!-- SMS开关 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/live_size_40dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/live_book_sms"
                    android:textColor="@color/black"
                    android:textSize="@dimen/live_size_14sp" />

                <Switch
                    android:id="@+id/swh_sms"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true"
                    android:switchMinWidth="20dp"
                    android:textOff=" "
                    android:textOn=" "
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track" />
            </RelativeLayout>

            <!-- Number -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/live_size_60dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/live_book_num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/live_size_14sp" />

                <TextView
                    android:id="@+id/txt_book_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/live_size_14sp" />

                <TextView
                    android:id="@+id/txt_book_change_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/txt_book_number"
                    android:gravity="right"
                    android:text="@string/live_book_change_num"
                    android:textColor="@color/book_live_light_violet"
                    android:textSize="@dimen/live_size_14sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Tips -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_size_40dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/live_size_14dp"
            android:paddingRight="@dimen/live_size_14dp"
            android:text="@string/live_note"
            android:textSize="@dimen/live_size_14sp" />

        <TextView
            android:id="@+id/tv_book_live_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/live_size_14dp"
            android:paddingRight="@dimen/live_size_14dp"
            android:textSize="@dimen/live_size_12sp" />

        <!-- BOOK NOW　-->
        <com.qpidnetwork.livemodule.view.ButtonRaised
            android:id="@+id/btn_book"
            android:layout_width="@dimen/live_size_140dp"
            android:layout_height="@dimen/live_size_40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/live_size_8dp"
            android:layout_marginTop="@dimen/live_size_16dp"
            button:background="@color/talent_light_violet"
            button:title="@string/live_book_now"
            button:title_color="@color/white"
            button:touch_feedback="@drawable/touch_feedback_holo_light_round_rectangle"/>

    </LinearLayout>
</ScrollView>
